minor adjustments to exercise1

--- a/code/Session01/exercise01.ipynb
+++ b/code/Session01/exercise01.ipynb
@@ -56,18 +56,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[92.309, 0.0, 53.0, 14.0, 0.0, 46.0, 6.0, 13.84, 0.513, 0.5778]\n",
-      "Type: <class 'list'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "fname = \"landolt.dat\"\n",
     "\n",
@@ -111,38 +102,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Type: <class 'numpy.ndarray'>\n",
-      "[92.309   0.     53.     14.      0.     46.      6.     13.84    0.513\n",
-      "  0.5778]\n",
-      "[ 9.2309e+01  9.2235e+01  9.2322e+01  9.2248e+01  9.2249e+01  9.2250e+01\n",
-      "  9.2330e+01  9.2252e+01  9.2253e+01  9.2335e+01  9.2339e+01  9.2342e+01\n",
-      "  9.2188e+01  9.2409e+01  9.2410e+01  9.2412e+01  9.2259e+01  9.2347e+01\n",
-      "  9.2260e+01  9.2348e+01  9.2417e+01  9.2263e+01  9.2497e+01  9.2425e+01\n",
-      "  9.2501e+01  9.2426e+01  9.2355e+01  9.2427e+01  9.2502e+01  9.2430e+01\n",
-      "  9.2276e+01  9.2508e+01  9.2507e+01  9.2364e+01  9.2433e+01  9.2288e+01\n",
-      "  9.3407e+01  9.3317e+01  9.3424e+01  9.4171e+01  9.4296e+01  9.4394e+01\n",
-      "  9.4401e+01  9.4242e+01  9.4251e+01  9.4702e+01  9.5015e+01  9.5301e+01\n",
-      "  9.5016e+01  9.5302e+01  9.5096e+01  9.5097e+01  9.5098e+01  9.5100e+01\n",
-      "  9.5101e+01  9.5102e+01  9.5252e+01  9.5190e+01  9.5193e+01  9.5105e+01\n",
-      "  9.5107e+01  9.5106e+01  9.5112e+01  9.5041e+01  9.5317e+01  9.5042e+01\n",
-      "  9.5263e+01  9.5115e+01  9.5043e+01  9.5271e+01  9.5328e+01  9.5329e+01\n",
-      "  9.5330e+01  9.5275e+01  9.5276e+01  9.5060e+01  9.5218e+01  9.5132e+01\n",
-      "  9.5062e+01  9.5137e+01  9.5139e+01  9.5066e+01  9.5227e+01  9.5142e+01\n",
-      "  9.5074e+01  9.5231e+01  9.5284e+01  9.5149e+01  9.5285e+01  9.5236e+01\n",
-      "  9.6036e+01  9.6737e+01  9.6409e+01  9.6083e+01 -7.1000e-02  9.7249e+01\n",
-      "  9.7042e+01  9.7345e+01  9.7351e+01  9.7075e+01  9.7284e+01  9.7224e+01\n",
-      "  9.8961e+01  9.8966e+01  9.8556e+01  9.8557e+01  9.8563e+01  9.8978e+01\n",
-      "  9.8581e+01  9.8580e+01]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Importing the package numpy and giving it the alias np\n",
     "# This is a common convention and allows us to refer to numpy functions as np.function_name\n",
@@ -173,23 +135,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Type: <class 'pandas.core.frame.DataFrame'>\n",
-      "     Star  rh  rm  rs  dd  dm  ds      V     BV     par\n",
-      "0  92.309   0  53  14   0  46   6  13.84  0.513  0.5778\n",
-      "1  92.235   0  53  16   0  36  22  10.60  1.638  1.3848\n",
-      "2  92.322   0  53  47   0  47  41  12.68  0.528  1.4118\n",
-      "3  92.248   0  54  31   0  40  20  15.35  1.128  1.9951\n",
-      "4  92.249   0  54  34   0  41  10  14.33  0.699  0.9312\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -207,40 +155,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0      0.513\n",
-      "1      1.638\n",
-      "2      0.528\n",
-      "3      1.128\n",
-      "4      0.699\n",
-      "       ...  \n",
-      "105    1.397\n",
-      "106    0.416\n",
-      "107    0.609\n",
-      "108    0.238\n",
-      "109    0.367\n",
-      "Name: BV, Length: 110, dtype: float64 \n",
-      "\n",
-      "Star    92.3090\n",
-      "rh       0.0000\n",
-      "rm      53.0000\n",
-      "rs      14.0000\n",
-      "dd       0.0000\n",
-      "dm      46.0000\n",
-      "ds       6.0000\n",
-      "V       13.8400\n",
-      "BV       0.5130\n",
-      "par      0.5778\n",
-      "Name: 0, dtype: float64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# We can access columns by name (more common in pandas)\n",
     "print(landolt_df['BV'], '\\n') # \\n is a newline character, just to make the output easier to read\n",
@@ -274,17 +191,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "YOUR CODE HERE\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Write the path to the file\n",
     "fname = \"path/to/file.extenstion\"\n",
@@ -355,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,18 +293,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10.0\n",
-      "10.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Now let's test the function on a parallax of 0.1 arcseconds\n",
     "p = 0.1\n",
@@ -414,31 +314,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on function dfromp in module __main__:\n",
-      "\n",
-      "dfromp(p)\n",
-      "    Returns the distance to a star in parsecs given its parallax in arcseconds.\n",
-      "    \n",
-      "    Parameters\n",
-      "    ----------\n",
-      "    p : float\n",
-      "        parallax in arcseconds\n",
-      "    \n",
-      "    Returns\n",
-      "    -------\n",
-      "    d : float\n",
-      "        distance in parsecs\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "help(dfromp)"
    ]
@@ -462,17 +340,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x is positive\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 3\n",
     "\n",
@@ -496,18 +366,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Distance from parallex = 0.1 milliarcsec: 10000.0 parsecs\n",
-      "Distance from parallex = 0.1 arcsec: 10.0 parsecs\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def dfromp(p, is_milli=True):\n",
     "    \"\"\"\n",
@@ -516,7 +377,8 @@
     "    Parameters\n",
     "    ----------\n",
     "    p : float\n",
-    "        parallax in arcseconds\n",
+    "        parallax in arcseconds or milliarcseconds\n",
+    "    \n",
     "    is_milli : bool, optional\n",
     "        whether the parallax is in milliarcseconds\n",
     "\n",
@@ -560,21 +422,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "4\n",
-      "9\n",
-      "16\n",
-      "25\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "my_list = [1, 2, 3, 4, 5]\n",
     "for item in my_list:\n",
@@ -592,22 +442,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10\n",
-      "9\n",
-      "8\n",
-      "10\n",
-      "9\n",
-      "8\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 10\n",
     "\n",
@@ -636,18 +473,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Shape of landolt_dat before append: (110, 10)\n",
-      "Shape of landolt_dat after append: (110, 11)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Shape of landolt_dat before append:\", np.shape(landolt_dat))\n",
     "\n",
@@ -664,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -714,17 +542,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Shape of landolt_arr after append: (110, 11)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "distances = dfromp(landolt_arr[:,-1])\n",
     "\n",
