Updated some markdown cells

--- a/code/Session01/exercise01.ipynb
+++ b/code/Session01/exercise01.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lesson 01\n",
+    "# Exercise 01\n",
     "\n",
     "Written By: Aiden Zelakiewicz (asz39@cornell.edu)\n",
     "\n",
@@ -358,9 +358,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can apply these statements to our distance function earlier to tell it what units we are working in.\n",
-    "This can achieve this by adding an additional parameter into our function, `is_milli`.\n",
-    "Parameters in functions are seperature by a comma, and can be given a default value by using an equals sign (`=`).\n",
+    "We can apply these statements to our distance function earlier to tell it whether we are working in arcseconds or milliarcseconds.\n",
+    "We achieve this by adding an additional parameter into our function, `is_milli`.\n",
+    "Parameters in functions are seperated by a comma, and can be given a default value by using an equals sign (`=`).\n",
     "Note that parameters without equal signs, namely required parameters, must be declared before optional parameters."
    ]
   },
