Added indentation comments

--- a/code/Session01/exercise01.ipynb
+++ b/code/Session01/exercise01.ipynb
@@ -387,7 +387,8 @@
     "    d : float\n",
     "        distance in parsecs\n",
     "    \"\"\"\n",
-    "\n",
+    "    \n",
+    "    # Notice the nested indentation here! 1 for the function, 1 for the if statement\n",
     "    if is_milli:\n",
     "        d = 1000/p\n",
     "    else:\n",
@@ -546,6 +547,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# [:] selects every row, then -1 selects the last column\n",
     "distances = dfromp(landolt_arr[:,-1])\n",
     "\n",
     "# Append the distances to the array using np.c_ (column stack)\n",
@@ -571,7 +573,7 @@
     "So by now we have distances in both `landolt_dat` and `landolt_arr`. One thing that might be useful to know about the star is its *absolute visual magnitude*, or $M_V$.\n",
     "This is defined as the apparent $V$ magnitude the star would have if it were located 10 parsecs away.\n",
     "\n",
-    "Given a distance $D$ in pc, we can derive $M_V$ from the equation below:\n",
+    "Given a distance $D$ in pc and apparent $V$ magnitude, we can derive $M_V$ from the equation below:\n",
     "$$\n",
     "V-M_V = 5 \\log_{10}(D)-5\n",
     "$$\n",
@@ -591,7 +593,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, apply your function to either the `list` or Numpy `ndarray` to get the absolute magnitudes for each star. If doing the `list`, use list comprehension rather than a traditional `for` loop. Remember if you need help, ask one of the bootcamp leads :)"
+    "Next, apply your function to either the `list` or Numpy `ndarray` to get the absolute magnitudes for each star. If doing the `list`, use list comprehension rather than a traditional `for` loop. Then, convert your `list` into an `ndarray` using `np.array(list_name)` so that you are consistent for the rest of the exercise. Remember if you need help, ask one of the bootcamp leads :)"
    ]
   },
   {
