Modified last activity and added subset file

--- a/code/Session01/exercise01.ipynb
+++ b/code/Session01/exercise01.ipynb
@@ -548,7 +548,7 @@
    "outputs": [],
    "source": [
     "# [:] selects every row, then -1 selects the last column\n",
-    "distances = dfromp(landolt_arr[:,-1])\n",
+    "distances = dfromp(landolt_arr[:,-1], is_milli=True)\n",
     "\n",
     "# Append the distances to the array using np.c_ (column stack)\n",
     "landolt_arr = np.column_stack((landolt_arr, distances))"
@@ -593,7 +593,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, apply your function to either the `list` or Numpy `ndarray` to get the absolute magnitudes for each star. If doing the `list`, use list comprehension rather than a traditional `for` loop. Then, convert your `list` into an `ndarray` using `np.array(list_name)` so that you are consistent for the rest of the exercise. Remember if you need help, ask one of the bootcamp leads :)"
+    "Next, apply your function to the Numpy `ndarray` to get the absolute magnitudes for each star and concatenate it using `np.column_stack()`. Be careful you are choosing the correct column that corresponds to the $V$-band magnitude and $D$ distance. Remember if you need help, ask one of the bootcamp leads :)"
    ]
   },
   {
@@ -603,6 +603,48 @@
    "outputs": [],
    "source": [
     "### YOUR CODE HERE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Print out the value of $M_V$ for the last star in your array with some \"flavor\" text to make sure you did the calculation correctly. You should get an absolute magnitude of ~2.76 mag."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### YOUR CODE HERE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Saving Data\n",
+    "\n",
+    "Finally, let's save a subset of the data we have created since our collaborator (you in Exercise02) wants to make some figures.\n",
+    "We will only need the $V$-band magnitude, $B-V$ color, $D$ distance, and $M_V$ absolute magnitude.\n",
+    "While you can save a file in plain Python, `Numpy`, or `Pandas`, we will just use `Numpy`'s `np.savetxt()` function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Start by gathering the columns we want to save to a new file\n",
+    "columns = [7,8,10,11] # Corresponding to V, B-V, distance, and M_V\n",
+    "\n",
+    "landolt_slice = landolt_arr[:,columns] # This will select all rows and only the columns we want\n",
+    "\n",
+    "# Save the file using np.savetxt as a csv\n",
+    "np.savetxt(\"landolt_subset.csv\", landolt_slice, delimiter=',', header=\"V, B-V, Distance, M_V\")"
    ]
   }
  ],
