Exercise04 and Challenges added
Major changes:
Completed Exercise04 and added challenges to the repository

Minor changes:
Added .gitignore file to the repository
Adjusted titles of Exercise01, Exercise02, and Exercise03

--- a/code/Session01/exercise01.ipynb
+++ b/code/Session01/exercise01.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercise 01\n",
+    "# Exercise 01 | Data Basics\n",
     "\n",
     "Written By: Aiden Zelakiewicz (asz39@cornell.edu)\n",
     "\n",
@@ -29,7 +29,9 @@
     "\n",
     "4. Loops and list comprehension\n",
     "\n",
-    "5. Perform Operations on Data"
+    "5. Perform Operations on Data\n",
+    "\n",
+    "6. Export your data to file"
    ]
   },
   {
