--- a/code/Session01/exercise02.ipynb
+++ b/code/Session01/exercise02.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercise 02\n",
+    "# Exercise 02 | Matplotlib\n",
     "\n",
     "Written By: Aiden Zelakiewicz (asz39@cornell.edu)\n",
     "\n",
