--- a/code/Session02/exercise03.ipynb
+++ b/code/Session02/exercise03.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercise 03\n",
+    "# Exercise 03 | Packages\n",
     "\n",
     "Written By: Aiden Zelakiewicz (asz39@cornell.edu)\n",
     "\n",
