--- a/code/Session01/exercise01.ipynb
+++ b/code/Session01/exercise01.ipynb
@@ -183,12 +183,11 @@
     "NOTE: The delimeter (what seperates the data) isn't whitespace anymore, and is a comma!\n",
     "\n",
     "\n",
-    "<details><summary>HINT:</summary>\n",
+    "**HINT:**\n",
+    "\n",
     "Both Numpy and Pandas allow an argument of delimeter=\" \" to define what the delimeter is.\n",
     "\n",
-    "If you have a list inside of a list (or array in an array) in the format (i, k) you can access the kth element of the ith list using my_list[k][i]\n",
-    "\n",
-    "</details>"
+    "If you have a list inside of a list (or array in an array) in the format (i, k) you can access the kth element of the ith list using my_list[k][i]\n"
    ]
   },
   {
