--- a/code/Session02/exercise03.ipynb
+++ b/code/Session02/exercise03.ipynb
@@ -104,7 +104,7 @@
     "ukirt = np.loadtxt('ukirt.csv', delimiter=',', skiprows=1)\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
-    "plt.style.use('./az-paper-twocol')\n",
+    "plt.style.use('./az-paper-twocol.mplstyle')\n",
     "\n",
     "# We will use this more than once, so let's define a function!\n",
     "# Remember DRY: Don't Repeat Yourself\n",
