--- a/code/Session01/exercise01.ipynb
+++ b/code/Session01/exercise01.ipynb
@@ -146,7 +146,7 @@
     "fname = \"landolt.dat\"\n",
     "\n",
     "# Often pandas dataframes have the alias df\n",
-    "landolt_df = pd.read_csv(fname, skiprows=22, delim_whitespace=True) # delim_whitespace=True tells pandas to split by ANY whitespace\n",
+    "landolt_df = pd.read_csv(fname, skiprows=22, sep=r'\\s+') # sep tells pandas how to split the data, '/s+' means split by whitespace\n",
     "\n",
     "print(\"Type:\", type(landolt_df))\n",
     "\n",
@@ -651,7 +651,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "py312",
    "language": "python",
    "name": "python3"
   },
@@ -665,7 +665,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
