Fixed errorbar and added limits

--- a/code/Session01/exercise02.ipynb
+++ b/code/Session01/exercise02.ipynb
@@ -213,12 +213,16 @@
     "x = np.linspace(0, 10, 100)\n",
     "ys = [np.sin(x), np.cos(x), np.tan(x), np.exp(x)]\n",
     "\n",
-    "# Add gaussian noise\n",
-    "y_err = [np.random.normal(0, .1, size=x.size) for y in ys]\n",
+    "# Add some random noise\n",
+    "y_err = [np.random.normal(0.5, .1, size=x.size) for y in ys]\n",
     "\n",
     "# Plot the data\n",
     "plt.errorbar(x, ys[0], yerr=y_err[0], c='k')\n",
     "plt.errorbar(x, ys[1], yerr=y_err[1], c='r')\n",
+    "\n",
+    "# We can also limit the x-axis to a specific range using plt.xlim(xmin, xmax)\n",
+    "# There is also an equivalent plt.ylim(ymin, ymax) for the y-axis\n",
+    "plt.xlim(0, 10)\n",
     "\n",
     "plt.show()"
    ]
@@ -307,18 +311,22 @@
     "# Now we can plot each set of data on a different axis with their own labels\n",
     "axes[0, 0].plot(x, ys[0], c='red', ls='--', label='sin(x)') # Create a line for the sin\n",
     "axes[0, 0].set_title('sin(x)')\n",
+    "axes[0, 0].set_xlim(0, 10) # Limit the x-axis to 0 to 10\n",
     "axes[0, 0].legend()\n",
     "\n",
     "axes[0, 1].plot(x, ys[1], c='purple', ls='-.', label='cos(x)') # Create a line for the cos\n",
     "axes[0, 1].set_title('cos(x)')\n",
+    "axes[0, 0].set_xlim(0, 10)\n",
     "axes[0, 1].legend()\n",
     "\n",
     "axes[1, 0].plot(x, ys[2], c='k', label='tan(x)') # Create a line for the tan\n",
     "axes[1, 0].set_title('tan(x)')\n",
+    "axes[0, 0].set_xlim(0, 10)\n",
     "axes[1, 0].legend()\n",
     "\n",
     "axes[1, 1].scatter(x, ys[3], c='skyblue', marker='v', label='exp(x)') # Create a scatter plot for the exp\n",
     "axes[1, 1].set_title('exp(x)')\n",
+    "axes[0, 0].set_xlim(0, 10)\n",
     "axes[1, 1].legend()\n",
     "\n",
     "plt.show()"
@@ -391,7 +399,8 @@
     "ax1 = fig.add_subplot(grid[0])\n",
     "ax2 = fig.add_subplot(grid[1])\n",
     "\n",
-    "noisy_data = ys[0]+y_err[0]\n",
+    "# Add noise to the data using a normal distribution\n",
+    "noisy_data = ys[0]+np.random.normal(0, 0.1, size=x.size)\n",
     "\n",
     "# Plot some noisy data\n",
     "ax1.scatter(x, noisy_data, c='k')\n",
@@ -508,7 +517,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "py312",
    "language": "python",
    "name": "python3"
   },
@@ -522,7 +531,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
